--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = {version="4.5.54", features=["derive"]}
 image = "0.25.8"
 num-traits = "0.2.19"
 rayon = "1.11.0"
